--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+@charset "UTF-8";
 * {
   padding: 0;
   margin: 0;
 }
 
 body {
+  overflow: hidden;
+  cursor: pointer;
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   font-size: 62.5%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  background: #111010;
 }
 
 h3, h4 {
@@ -19,15 +32,74 @@ button {
   font-size: 1.1rem;
   border: #00FF00 2px solid;
   border-radius: 5px;
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.game_infor {
+  background: #111010;
+  color: greenyellow;
+  width: 1200px;
+  height: 100vh;
+  transition: all 0s 0s linear;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@keyframes disapper {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.game_infor h1 {
+  font-size: 2rem;
+}
+
+.table {
+  width: 80%;
+}
+
+.table table {
+  font-size: 1rem;
+  width: 100%; /* Chiều rộng của bảng */
+  border: 1px solid #000; /* Viền của bảng */
+  border-collapse: collapse; /* Gộp viền của các ô */
+}
+
+table tr {
+  word-break: keep-all;
+  padding: 8px; /* Khoảng cách giữa nội dung và viền của ô */
+}
+
+table td {
+  border: 3px solid #00FF00; /* Viền của dữ liệu cột */
+  padding: 5px 20px; /* Khoảng cách giữa nội dung và viền của ô */
+  text-align: center;
+}
+
+.game_infor button {
+  width: 200px;
+  height: 50px;
 }
 
 main {
-  display: flex;
+  display: none;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 1100px;
   height: 100vh;
   background: #111010;
 }
@@ -95,10 +167,188 @@ input {
   width: 100%;
   height: 20%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
+}
+
+.notifications-flex {
+  display: none;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.notifications {
+  width: 40%;
+  height: 100vh;
+  background: #161821;
+  box-shadow: inset 2px 2px 4px rgb(180, 12, 238);
+  position: absolute;
+}
+
+.notifications h1 {
+  font-size: 2rem;
+  color: yellow;
+  text-shadow: 6px 6px 10px rgba(232, 201, 13, 0.5);
+  transition: all 2s 0s linear;
+  animation: wordAnima 3s infinite;
+}
+
+.notifications section {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.notifications button {
+  width: 100px;
+  height: 50px;
+}
+
+.notifications__defeat h1 {
+  color: red;
+}
+
+.notifi_anima_show {
+  animation: notifi_show 2s forwards;
+}
+
+.notifi_anima_up {
+  animation: notifi_up 2s forwards;
+}
+
+@keyframes notifi_show {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes notifi_up {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+@keyframes wordAnima {
+  0% {
+    transform: translateY(0%);
+  }
+  50% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+.pop_up {
+  width: 60vw;
+  height: 95vh;
+  background: black;
+  color: #00FF00;
+  display: none;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  border-radius: 20px;
+  border: 3px #00FF00 solid;
+  transition: all 2s 0s linear;
+  text-shadow: 6px 6px 10px #00FF00;
+}
+
+.pop_up h1 {
+  font-size: 1.5rem;
+}
+
+.pop_up .name_pop {
+  font-size: 2rem;
+  animation: shake 3s infinite;
+  transition: all 4s 3s linear;
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(0deg);
+  }
+  20%, 60%, 100% {
+    transform: rotate(5deg);
+  }
+  40%, 80% {
+    transform: rotate(-5deg);
+  }
+}
+.pop_up #close {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+
+@keyframes showUp {
+  0% {
+    transform: translateX(-150%) rotate(1turn);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+@keyframes hiddenUp {
+  0% {
+    transform: translateX(0%) rotate(1turn);
+  }
+  100% {
+    transform: translateX(200%);
+    display: none;
+  }
+}
+#formVideo {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#formVideo label {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#formVideo input {
+  display: none;
+}
+
+#formVideo button[type=submit] {
+  background: #00FF00;
+  color: black;
+  padding: 1px 5px;
+  font-size: 1.1rem;
+  border: #00FF00 2px solid;
+  border-radius: 5px;
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  width: 30%;
+  font-size: 1.2rem;
+  background: yellow;
 }
 
 /*# sourceMappingURL=style.css.map */
